--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -261,7 +261,7 @@ When separate database servers were used (for example, in horizontal scaling), t
 
   Our Tsung tests used the test user arrival rates shown in Figure \ref{graph:users}.\\
 
-  Missing our slowest level of caching, our MySQL "caches" of Twitter sentiment data, and to a lesser extent Yahoo Finance data, causes $20+$ second delays.  Because of these unreasonably long delays, our service would have worker processes keeping those caches warm if we deployed this to the real world.  To simulate this effect in our tests, we limited our test users to interacting with a small subset of the real world stocks.  According to our tests, users only care about Apple, Facebook, Google and Tesla stocks, which is unrealistic.  Another benefit of focusing on popular stocks is that we are guaranteed to always have enough Twitter data about each stock symbol.  Some of the less popular stock symbols would have 5 tweets or less, making both the data inaccurrate and the request too easy to strain the system.\\
+  Missing our slowest level of caching, our MySQL "caches" of Twitter sentiment data, and to a lesser extent Yahoo! Finance data, causes $20+$ second delays.  Because of these unreasonably long delays, our service would have worker processes keeping those caches warm if we deployed this to the real world.  To simulate this effect in our tests, we limited our test users to interacting with a small subset of the real world stocks.  According to our tests, users only care about Apple, Facebook, Google and Tesla stocks, which is unrealistic.  Another benefit of focusing on popular stocks is that we are guaranteed to always have enough Twitter data about each stock symbol.  Some of the less popular stock symbols would have 5 tweets or less, making both the data inaccurrate and the request too easy to strain the system.\\
 
 
   \subsection{Critical Path}
@@ -308,7 +308,7 @@ When separate database servers were used (for example, in horizontal scaling), t
 
   A MySQL driven "cache" was created to store Twitter analysis data for a day, for each stock that was searched.  While initial stock searches caused unreasonable delays of $20+$ seconds, subsequent delays were much, much faster, happening in less than $5$ seconds.  The cache stores the overall calculated sentiment and it stores a single tweet out of the $100$ sampled tweets that has the closest sentiment value as an average tweet for the given sample.\\
 
-  A similar MySQL driven caching system as added to cache the 10 years of Yahoo Finance stock data downloaded for each symbol requested.  The stock data itself was stored as a JSON text blob, as the client side graphing library read in that JSON.  It made more sense to store the JSON received from Yahoo in the same format that the graph required, than it did to parse the JSON, store each value individually, and read those values out as JSON later.
+  A similar MySQL driven caching system as added to cache the 10 years of Yahoo! Finance stock data downloaded for each symbol requested.  The stock data itself was stored as a JSON text blob, as the client side graphing library read in that JSON.  It made more sense to store the JSON received from Yahoo! Finance in the same format that the graph required, than it did to parse the JSON, store each value individually, and read those values out as JSON later.
 
   \subsection{Vertical scaling}
   Vertical scaling, simply throwing more processing power at the problem, is simple but expensive.  We expected to get marginal performance gains by scaling vertically because our main bottleneck was the CPU bound Twitter sentiment analysis.
@@ -417,9 +417,10 @@ When separate database servers were used (for example, in horizontal scaling), t
     Figure \ref{dig:horizontal} shows the configuration of our load balancer, servers and database.  This method of scaling lets us easily add more application servers to increase our available processing power, while not having to deal with distributed databases or more complex data persistence layers (although we are able to improve the data persistence layer if we want).
 
   \subsection{Memory Caching}
-  Another method we implemented to speed up our application was to use a memory object caching system. We used memcached in our application through the "dalli" gem. The "dalli" gem stores the cache in memory instead of on disk. Since memory provides faster access times than disk, the read and write times of cache fragments were reduced. In order to provide this client-side caching, a new instance of memcached needed to be started within each server. When the memory cache was full or the memory expired after a set amount of time, we flushed the old caches. If there was still space but the cached item had expired, we immediately overwrote the old value with a current one. The need for a MySQL database was virtually eliminated when using a monolithic database scheme as this client-side cache became the first layer of data that a user received.\\
+  % TODO We *don't* flush Memcached when "full", right?
+  Another method we implemented to speed up our application was to use a memory object caching system. We used Memcached in our application through the \texttt{dalli} gem, which stores the cache in memory instead of on disk. Since memory provides faster access times than disk, the read and write times of cache fragments were reduced. In order to provide this server-side caching, a new instance of Memcached needed to be started within each server. When the memory cache was full or the memory expired after a set amount of time, we flushed the old caches. If there was still space but the cached item had expired, we immediately overwrote the old value with a current one. Memcached replaced our MySQL database as our main caching layer as it was faster than MySQL but had the same required functionality.\\
 
-  We implemented memcached on the Yahoo! Finance data, the overall sentiment, and the tweet which most closely reflected the sentiment of a stock.
+  We implemented Memcached on the Yahoo! Finance data, the overall sentiment, and the tweet which most closely reflected the sentiment of a stock.
 \end{mainSection}
 
 \bibliographystyle{plainnat}
